[package]
homepage = "https://github.com/selkamand/probepicker"
name = "probepicker"
version = "0.1.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/selkamand/probepicker"
authors = ["Sam El-Kamand <selkamand@ccia.org.au>"]
description = "Identify most variable probes in larger-than-memory methylation array datasets"
[package.metadata.wix]
upgrade-guid = "D0C5D53F-6D8E-4C43-91E0-4742388455F2"
path-guid = "4704AA39-F3BD-4699-A33D-D73427E7A69A"
license = false
eula = false

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.8", features = ["cargo"] }
csv = "1.3.0"
flate2 = "1.0.30"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "selkamand/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@selkamand"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
